kustomization/base/phpmyadmin/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: phpmyadmin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: phpmyadmin
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin
          ports:
            - containerPort: 80
