kustomization/base/phpmyadmin/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-svc
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app.kubernetes.io/name: phpmyadmin
