kustomization/base/phpmyadmin/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: phpmyadmin-ingressroute
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      services:
        - kind: Service
          name: phpmyadmin-svc
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: phpmyadmin-https-redirect-ingressroute
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      middlewares:
        - name: http-to-https-middleware
          namespace: traefik
      services:
        - kind: TraefikService
          name: noop@internal
